docs/_static/style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
@import url('https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans&display=swap');
@import url('https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.207/distr/fira_code.css');

/*
 * Copyright © Nekoka.tt 2019-2020
 *
 * This file is part of Hikari.
 *
 * Hikari is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Hikari is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with Hikari. If not, see <https://www.gnu.org/licenses/>.
 */


/**************************** dark theme ****************************/

body {
    background-color: #272822;
    color: #f8f9fa;
}

/* whyyyyy */
code, .literal, .literal > span.pre {
    color: #F92672 !important;
    background-color: transparent !important;
    border-color: transparent !important;
}

pre {
    background-color: transparent !important;
    border-color: transparent !important;
}

dt:target, span.highlighted {
    background-color: transparent !important;
    text-decoration: underline;
    text-decoration-color: #F92672;
}

/* Offset anchors from the top a bit to compensate for the header. */
dt[id^='hikari'], div.section[id^='hikari'] {
  padding-top: 40px;
  margin-top: -40px;
  display: inline-block; /* required for webkit browsers */
}

/* syntax highlighting: https://tmtheme-editor.herokuapp.com/#!/editor/theme/Monokai */
/* yes, i hate myself for spending this much time deciphering this. */
.c1, .c2, .c3 { color: #8F8C7E !important; }  /* single line comment */
.gp { color: #F92672 !important; }  /* >>> symbol */
.nb { color: #FD971F !important; font-style: italic; }  /* builtin name */
.nn { color: #FD971F !important; font-style: italic; }  /* namespace name */
.nc { color: #A6E22E !important; text-decoration: underline; } /* class name */
.ne { color: #FD971F !important; font-style: italic; } /* exception name */
.nd { color: #FD971F !important; } /* decorator name */
.nf { color: #A6E22E !important; } /* function name */
.k { color: #F92672 !important; }   /* keyword */
.kn { color: #F92672 !important; }   /* keyword for start of import declaration? */
.kc { color: #FD971F !important; font-style: italic; font-weight: bold;}  /* singleton literal (False, True, None, etc) */
.bp { color: #D6D2BC !important; font-style: italic; font-weight: bold; text-decoration: underline; }  /* base parameter (self, cls, etc) */
.n { color: #D6D2BC !important; font-style: italic; }   /* name */
.o { color: #F92672 !important; }   /* operator */
.p { color: #75715E !important; }   /* parenthesis */
.go { color: #FFFFFF !important; }  /* output text */
.mi { color: #AE81FF !important; }  /* int literal */
.mf { color: #AE81FF !important; }  /* float literal */
.mh { color: #AE81FF !important; }  /* hex literal */
.mo { color: #AE81FF !important; }  /* octal literal */
.mb { color: #AE81FF !important; }  /* bool literal */
.sd { color: #8F8C7E !important; }  /* multiple line docstring */
.vm { color: #D6D2BC !important; font-style: italic; font-weight: bold; }  /* magic attribute? */
.fm { color: #D6D2BC !important; font-style: italic; font-weight: bold; }  /* magic attribute? */
.s1, .s2 { color: #E6DB74 !important; }  /* string literal */

.viewcode-link, .headerlink {
    color: #66D9EF;
}

.reference {
    color: #a6e22e !important;
}

.external {
    color: #fd971f !important;
}

nav, .alert, .admonition {
    background-image: none !important;
}

.navbar {
    background-image: none !important;
    background-color: #404238 !important;
    border-color: transparent !important;
}

/*************************** layout fixes ***************************/

h1, h2, h3, h4, h5, h6 {
    word-wrap: break-word;
}

/*
 * Apparently if it is too thin in width on display: block, it makes the html
 * element not fit the window, and then the text just flows off the viewport,
 * making the viewport only 2/3 of the screen and looking ridiculous. If we use
 * flex, it mediates this but then on large devices the viewport snaps rather
 * than being responsive.
 */

html {
    display: flex !important;
}

@media screen and (min-width: 430px){
    html {
        display: block !important;
    }    
}

/*
 * Make body fill the viewport always
 */
body {
    position: relative;
    min-height: 100vh;
    height: 100%;
}

body > div.container {
    min-height: -webkit-fill-available;
}

/*
 * Make the footer sticky to the bottom of the body.
 */
html {
    min-height: 100vh !important;
}

.navbar {
    top: 0;
}

@media screen and (min-width: 600px){
    div.navbar {
        position: sticky !important;
    }

    div.container-fluid.navbar-inverse.navbar-expand-lg, div.navbar {
        min-height: auto;
        position: fixed;
        box-sizing: border-box;
        width: 100%;
        z-index: 9999999999999;
    }

    div.container-fluid.navbar-inverse.navbar-expand-lg {
        bottom: -10px;
    }
}

.nav a {
    font-weight: bold;
}

#navbar.container {
    margin-left: 1em;
    margin-right: 1em;
}

.navbar-text {
    /* bootswatch bugfix for version not aligning with logo i guess */
    line-height: 21px;
}

#navbar {
    border-radius: 0px !important;
}

.navbar a, .footer a {
    color: #ccc !important;
}

.navbar a:hover, .footer a:active {
    color: #fff !important;
}

.dropdown-menu .caption {
    padding-left: 1em;
}

.nav {
    font-family: 'Open Sans', sans-serif !important;
}

footer:before {
    margin-bottom: 1em;
}

footer.footer {
    margin-top: 1em;
    margin-bottom: 1em;
    font-weight: bold;
    border: 0;
    color: white;
}

code {
    font-family: 'Fira Code', monospace !important;
    font-feature-settings: "calt" 1 !important;
    font-variant-ligatures: contextual !important;
}

.highlight {
    font-family: 'Fira Code', monospace !important;
    font-feature-settings: "calt" 1 !important;
    font-variant-ligatures: contextual !important;
}

.pre {
    font-family: 'Fira Code', monospace !important;
    font-feature-settings: "calt" 1 !important;
    font-variant-ligatures: contextual !important;
}

@supports (font-variation-settings: normal) {
  code { font-family: 'Fira Code VF', monospace; }
  .highlight { font-family: 'Fira Code VF', monospace; }
  pre { font-family: 'Fira Code VF', monospace; }
}

.navbar-brand, h1, h2, h3, h4, h5, h6 {
    font-family: 'Indie Flower', cursive;
}

dl {
    margin-top: 0em;
    margin-bottom: 0em;
}

dl.class {
    margin-top: 4em !important;
    margin-bottom: 4em !important;
}

dl > dd {
    margin-left: 4em;
    font-size: 90%;
}

.sig-name.descname {
    font-size: inherit !important;
}

